--- a/templates/info.html
+++ b/templates/info.html
@@ -175,6 +175,11 @@
             <p>
                 Get ready to create unforgettable memories with a weekend packed full of activities for everyone. From the peaceful greens of Glasgow Park to the lively beats of Saturday night live, we've arranged a variety of events to ensure your days are filled with joy, laughter, and camaraderie. Dive into the details below and prepare for an adventure that will be talked about for years to come!
             </p>
+            <h2> Hey Family,
+
+If anyone needs a ride throughout the weekend, feel free to call me. There might be someone available to transport people to and from the festivities. Please remember that rides will be provided on a first-come, first-served basis.
+    My name is Kamirah Motley and you can contact me at 1(302)-542-9956
+</h2>
         </div>
         <h3>Calendar of Events:</h3>
 
