final draft of website

--- a/templates/index.html
+++ b/templates/index.html
@@ -137,6 +137,9 @@
                 <img src="{{ url_for('static', filename='images/thumbnail_IMG_4928 (1).JPG') }}" alt="News">
                 <span>News</span>
             </a>
+            <a class="nav-item" href="/home" style="--i:5">
+                <img src="{{ url_for('static', filename='images/thumbnail_IMG_4928 (1).JPG') }}" alt="News">
+                <span>News</span>
         </div>
     </div>
 
