final draft of website

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,10 +113,11 @@
         <!-- Circular navbar -->
         <div class="navbar" id="navbar">
             <!-- Navigation items with images -->
-            <a class="nav-item" href="/home" style="--i:0">
-                <img src="{{ url_for('static', filename='images/rsz_4e57ce68-8858-44c7-a0f6-f4751350efb8.jpg') }}" alt="Resized Image">
-                <span>Home</span>
-            </a>
+            <a class="nav-item" href="/" style="--i:0">
+    <img src="{{ url_for('static', filename='images/rsz_4e57ce68-8858-44c7-a0f6-f4751350efb8.jpg') }}" alt="Resized Image">
+    <span>Home</span>
+</a>
+
             <a class="nav-item" href="/about" style="--i:1">
                 <img src="{{ url_for('static', filename='images/thumbnail_IMG_4928 (1).JPG') }}" alt="About">
                 <span>About</span>
@@ -137,9 +138,6 @@
                 <img src="{{ url_for('static', filename='images/thumbnail_IMG_4928 (1).JPG') }}" alt="News">
                 <span>News</span>
             </a>
-            <a class="nav-item" href="/home" style="--i:5">
-                <img src="{{ url_for('static', filename='images/thumbnail_IMG_4928 (1).JPG') }}" alt="News">
-                <span>News</span>
         </div>
     </div>
 
